# superagentX-handlers

./: .gitignore  README.md  pyproject.toml
superagentx_handlers/: __init__.py  asana_handler.py  best_buy.py  code_gen.py  csv_cli.py  csv_data.py  defender.py  defender365.py  docker_deployment.py  extract_gpt_handler.py  gcphandler.py  gitLab.py  github.py  github_handler.py  github_pr_handler.py  gitlab.py  gitlab_details.py  gitlab_handler.py  image_generator.py  linkedin_handler.py  local_build.py  manageengine.py  nessus.py  salesforce.py  scrape.py  secpod.py  servicenow.py  sftp.py  sftp_handler.py  slack.py  snowflake.py  sophos.py  sql.py  taiga.py  teams_handler.py  teams_notifications.py  twitter.py  weather.py  whatsapp.py  wikipedia.py  (+2 more)
superagentx_handlers/atlassian/: confluence.py  jira.py
superagentx_handlers/aws/: __init__.py  api_gateway.py  cloudfront.py  cloudwatch.py  cognito.py  ec2.py  ecs.py  elasticache.py  elb.py  elb_main.py  helper.py  iam.py  rds.py  s3.py  security_groups.py  security_hub.py  serverless.py
superagentx_handlers/azure/: __init__.py  api_gateway.py  application_gateway.py  cloud_functions.py  iam.py  loadbalancer.py  nsg.py  storage.py  vm.py
superagentx_handlers/crm/: hubspot_crm.py
superagentx_handlers/cybersecurity/: __init__.py  snyk.py
superagentx_handlers/datadog/: __init__.py  cloud_siem.py  incidents.py
superagentx_handlers/ecommerce/: __init__.py  amazon.py  best_buy.py  fake_amazon.py  fake_flipkart.py  fake_product.py  flipkart.py  price_track.py  walmart.py
superagentx_handlers/extract/: __init__.py  ai.py  extract.py  extract_ai.py
superagentx_handlers/extract_ai/: __init__.py  doc_extract.py  extract_handler.py
superagentx_handlers/gcp/: compute.py  (+16 more)
tests/: test_amazon.py  test_atlassian_handler.py  test_calender_handler.py  test_gmail_agent.py  test_pipe_ecom.py  test_walmart_handler.py  test_weather_handler.py  test_wiki_ai_pipe.py
(+148 files in other folders)
