[tool.poetry]
name = "superagentx-handlers"
version = "0.1.5.10b1"
description = ""
authors = [
    "SuperAgentX AI <support@superagentx.ai>",
]
maintainers = [
    "SuperAgentX AI <support@superagentx.ai>",
]
license = "MIT"
readme = "README.md"
homepage = "https://www.superagentx.ai/"
repository = "https://github.com/superagentxai/superagentx"
documentation = "https://docs.superagentx.ai/"
keywords = ["superagentX", "AGI", "Agentic AI", "ASI", "superagentx", "agent", "LLM"]

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
aiohttp = "^3.10.10"
atlassian-python-api = "^3.41.16"
hubspot-api-client = "^10.0.0"
openai = "^1.52.0"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.149.0"
wikipedia-api = "^0.7.1"
crawl4ai = "^0.3.731"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
psycopg2-binary = "^2.9.10"
oracledb = "^2.4.1"
pymssql = "^2.3.1"
asyncpg = "^0.30.0"
aiomysql = "^0.2.0"
aioodbc = "^0.5.0"
jira = "^3.8.0"
pypdf = "^5.0.1"
tweepy = {extras = ["async"], version = "^4.14.0"}
requests-html = "^0.10.0"
pyshorteners = "^1.0.1"
lxml-html-clean = "^0.4.1"
slack-sdk = "^3.35.0"
boto3 = "^1.38.42"
msgraph-sdk = "^1.34.0"
google-cloud-resource-manager = "^1.14.2"
python-gitlab = "6.1.0"
azure-mgmt-compute = "34.1.0"
azure-mgmt-storage = "^23.0.1"
azure-storage-blob = "^12.25.1"
azure-mgmt-network = "^29.0.0"
google-cloud-storage = "^3.2.0"
google-cloud-compute = "^1.31.0"
google-cloud-run = "^0.10.18"
google-cloud-iam = "^2.19.1"
google-cloud-api-gateway = "^1.12.2"
azure-mgmt-web = "^9.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.dev.dependencies]
superagentx = "^0.1.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
